--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "hackathon",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Pavlo Zhurbytskyi",
-  "license": "ISC",
-  "devDependencies": {
-    "express": "^4.18.2"
-  }
+    "name": "hackathon",
+    "type": "module",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "rd /s /q dist && tsc",
+        "start": "node dist/index.js",
+        "bs": "npm run build && npm run start"
+    },
+    "author": "Pavlo Zhurbytskyi",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/express": "^4.17.21",
+        "express": "^4.18.2"
+    }
 }
